--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "emailjs-com": "^3.2.0",
     "google-map-react": "^2.1.10",
     "jwt-decode": "^3.1.2",
+    "material-ui-popup-state": "^2.0.0",
     "moment": "^2.29.1",
     "npm": "^8.1.1",
     "react": "^17.0.2",
