--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.4",
+    "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.0.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.29.0",
     "axios": "^0.22.0",
+    "date-fns": "^2.28.0",
     "emailjs-com": "^3.2.0",
     "google-map-react": "^2.1.10",
     "jwt-decode": "^3.1.2",
