--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.0.4",
+    "@react-pdf-viewer/core": "^3.1.2",
+    "@react-pdf-viewer/default-layout": "^3.1.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -25,6 +27,7 @@
     "material-ui-popup-state": "^2.0.0",
     "moment": "^2.29.1",
     "npm": "^8.1.1",
+    "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-cookie": "^4.1.1",
